--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
+                sh 'chmod +x -R ${env.WORKSPACE}'
             }
         }
     }
